--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <h1>This is a heading</h1>
 <p>This is a paragraph.</p>
 <p>Hello World</p>
+<img src="bc63e71ad63f06915fc74b6e4cabb148.png" alt="test image">
 </body>
 </html>
