--- a/games/index.html
+++ b/games/index.html
@@ -1,4 +1,14 @@
 <!DOCTYPE html><html dir="ltr" lang="en" class="theme light classic"><head>
+<!-- Matomo Tag Manager -->
+<script>
+  var _mtm = window._mtm = window._mtm || [];
+  _mtm.push({'mtm.startTime': (new Date().getTime()), 'event': 'mtm.Start'});
+  (function() {
+    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+    g.async=true; g.src='https://cdn.matomo.cloud/freedom-gate.matomo.cloud/container_ByERvSPS.js'; s.parentNode.insertBefore(g,s);
+  })();
+</script>
+<!-- End Matomo Tag Manager -->
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
 <base href="."><title>Clever | Log in</title>
 	<link rel="canonical" href="https://freedom-gate.my.canva.site" />
